--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -14,9 +14,7 @@ ext {
     awsJavaSdkVersion = "2.17.3"
 }
 
-// tasks.named('generateMetadataFileForMavenPublication') {
-//     dependsOn('plainJavadocJar')
-// }
+version = dashdiveSdkVersion
 
 javadoc {
     dependsOn('compileJava')
