Add no op arg to builder; add sampler arg with test

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ integration_test/client/src/main/resources/multipart.txt
 /.gradle/
 /bin/
 /build/
-/.settings/
+**/.settings/
+**/.factorypath
 .classpath
 .project
 /.vscode/
